--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
-        "spatie/enum": "^3.13"
+        "spatie/enum": "^3.13",
+        "spatie/laravel-permission": "^5.8"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
