--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "@tailwindcss/typography": "^0.5",
         "alpinejs": "^3.8",
         "autoprefixer": "^10.4",
+        "laravel-echo": "^1.15.0",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.1.14",
+        "pusher-js": "^8.0.1",
         "resolve-url-loader": "^3.1",
         "sass": "^1.3",
         "sass-loader": "^8.0",
